--- a/apply.html
+++ b/apply.html
@@ -10,11 +10,14 @@
     <header>
         <nav>
             <ul>
+            <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="team.html">Admin Team</a></li>
                 <li><a href="apply.html">Apply</a></li>
-                <li><a href="contact.html">Contact Us</a></li            </ul>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
         </nav>
     </header>
 
