--- a/team.html
+++ b/team.html
@@ -13,7 +13,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="team.html">Admin Team</a></li>
-                <li>                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="apply.html">Apply</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
