--- a/index.html
+++ b/index.html
@@ -3,34 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Junior Care Clinic at Berkeley</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Admin Team - Junior Care Clinic at Berkeley</title>
+    <link rel="stylesheet" href= "style.css">
 </head>
 <body>
+
     <header>
+        <a href="index.html">
+            <img src="assets/jcc_logo.png" alt="Junior Care Clinic Logo" class="logo">
+        </a>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="team.html">Admin Team</a></li>
-                <li><a href="apply.html">Apply</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
+            <a href="index.html" class="active">Home</a>
+            <a href="#about-section">About Us</a>
+            <a href="team.html">Admin Team</a>
+            <a href="apply.html">Apply</a>
+            <a href="contact.html">Contact Us</a>
         </nav>
     </header>
 
-    <main>
-        <h1>Welcome to Junior Care Clinic</h1>
-        <section id="mission">
-            <h2>Our Mission</h2>
-            <p>Insert your mission statement here. This is where you can easily update the content to reflect JCC's goals and values.</p>
-        </section>
-    </main>
+    <section class="home">
+        <h1 class="title">Junior Care Clinic</h1>
+    </section>
 
-    <footer>
-        <p>&copy; 2024 Junior Care Clinic at Berkeley. All rights reserved.</p>
-    </footer>
+    <section id="about-section" class="about">
+        <h1>Who are we?</h1>
+        <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste cum unde ipsum similique. Quam dolores ipsum harum dignissimos incidunt, sit similique ipsa modi in, ipsam perferendis cumque excepturi et? Fuga mollitia similique error neque sapiente magnam, ut, esse ea iste nobis, praesentium eius saepe nemo dignissimos? Ipsum neque maiores, ab tenetur eveniet officia? Quaerat iste, similique molestiae a aliquam laboriosam iusto repellendus doloremque, libero nulla sit ratione laudantium ipsam excepturi cumque repellat sint tempora ipsa. Tempora, laborum id quo, quam voluptatem voluptates laboriosam ducimus fugiat tempore cum rerum quisquam praesentium culpa dignissimos ullam dolores fugit maxime nam nemo voluptas quos veniam. Sapiente voluptate atque ut, eaque officia repellendus hic error molestias sit qui incidunt dolor sequi iste fugit beatae vitae, animi iure earum? Ab corrupti reprehenderit placeat repudiandae quia corporis, perspiciatis expedita animi consectetur doloremque numquam, unde eveniet! Recusandae optio eligendi illo temporibus eaque soluta, fugiat eveniet, saepe animi, iusto deleniti autem illum? Autem laboriosam hic fugit consectetur. Accusamus adipisci earum libero aut esse quis accusantium dolore et doloribus, debitis illum id saepe nesciunt unde, dolorum pariatur aperiam perspiciatis laudantium ea atque magnam reiciendis possimus deleniti! Velit accusantium mollitia animi quas cupiditate, porro voluptate quam sint reiciendis exercitationem voluptas eligendi?</p>
+    </section>
 
     <script src="script.js"></script>
-</body>
 </html>
